[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["AKlem <Alex0.oKlem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
python-jose = "^3.3.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
